Fixed: align logo and contents

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -12,7 +12,7 @@ body {
     padding: 0;
     img {
       height: 50px;
-      padding: 10px 20px 10px;
+      padding: 10px 20px 10px 15px;
     }
   }
   .container h3, .container h4 {
